--- a/404.html
+++ b/404.html
@@ -4,12 +4,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale-1">
         <title>404 | Husky's website</title>
-        <link rel="icon" href="./images/favicon.png">
+        <link rel="icon" href="/images/favicon.png">
         <!--description-->
         <meta name="description" content="Connecting a wider World.">
         <!--keywords-->
         <meta name="keywords" content="胡斯凯,胡斯凱,hooskai,siberia husky,SiberiaHusky">
-        <link href="./assets/style.css" rel="stylesheet">
+        <link href="/assets/style.css" rel="stylesheet">
     </head>
     <body style="background-color: #1e86dd;">
         <!--blue screen-->
