--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale-1">
         <title>Husky's website</title>
-        <link rel="icon" href="./images/favicon.png">
+        <link rel="icon" href="/images/favicon.png">
         <!--描述-->
         <meta name="description" content="Connecting a wider World.">
         <!--關鍵詞-->
@@ -15,8 +15,8 @@
         <!--fontawesome-->
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
         <!--styles-->
-        <link href="./assets/style.css" rel="stylesheet">
-        <script src="./assets/script.js"></script>
+        <link href="/assets/style.css" rel="stylesheet">
+        <script src="/assets/script.js"></script>
     </head>
     <body>
         <!--slogan-->
