--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
         <!--blue screen-->
         <div style="margin: 60pt;">
             <h1 style="font-size: 60pt; font-weight: normal; color: white;">:(</h1>
-            <p style="font-size: 20pt; color: white; margin-top: 20pt;">The Website or Files connot be found. After <span id="changingText">5</span> seconds, the web page will automatically return.</p>
+            <p style="font-size: 20pt; color: white; margin-top: 20pt;">The Webpage or Files connot be found. After <span id="changingText">5</span> seconds, the web page will automatically return.</p>
             <p style="font-size: 10pt; color: white; margin-top: 80pt;">If the file is very Important, you can send an <a href="mailto:mail@hooskai.ml" style="color: white; font-weight: bold;">E-Mail</a> to me.</p>
         </div>
         <!--count down script-->
@@ -27,7 +27,7 @@
                 var index = 0;
     
                 setTimeout(function() {
-                    window.location.href = history.back();
+                    window.history.back()
                 }, 5000);
     
                 setInterval(function() {
