--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale-1">
         <title>Husky's website</title>
         <link rel="icon" href="/images/favicon.png">
-        <!--描述-->
+        <!--description-->
         <meta name="description" content="Connecting a wider World.">
-        <!--關鍵詞-->
+        <!--keywords-->
         <meta name="keywords" content="胡斯凯,胡斯凱,hooskai,siberia husky,SiberiaHusky">
         <!--Bootstrap-->
         <link href="//mirror.hooskai.ml/bootstrap/bootstrap.min.css" rel="stylesheet" />
