--- a/apps/piday/index.html
+++ b/apps/piday/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html lang="zh-hant-TW">
+<html lang="en-US">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale-1">
-        <title>胡斯凱的網站</title>
-        <link rel="icon" href="../images/favicon.png">
-        <!--描述-->
-        <meta name="description" content="鏈接更寬闊的世界">
-        <!--關鍵詞-->
+        <title>Countdown to Pi day | Husky's website</title>
+        <link rel="icon" href="//intl.hooskai.ml/images/favicon.png">
+        <!--description-->
+        <meta name="description" content="Connecting a wider World.">
+        <!--keywords-->
         <meta name="keywords" content="胡斯凯,胡斯凱,hooskai,siberia husky,SiberiaHusky,pi,pi day,圓周率日.圆周率日,3.14">
         <!--Bootstrap-->
         <link href="//mirror.hooskai.ml/bootstrap/bootstrap.min.css" rel="stylesheet">
         <!--fontawesome-->
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
         <!--styles-->
-        <link href="../../assets/style.css" rel="stylesheet">
-        <script src="../../assets/script.js"></script>
+        <link href="//intl.hooskai.ml/assets/style.css" rel="stylesheet">
+        <script src="//intl.hooskai.ml/assets/script.js"></script>
     </head>
     <body>
         <!--navbar-->
         <!--navbar-->
         <nav class="navbar navbar-dark fixed-top" style="background-color: #1e86dd;">
             <div class="container-fluid">
-                <a class="navbar-brand">圓周率日倒計時</a>
+                <a class="navbar-brand">Countdown to Pi day</a>
                 <button class="btn btn-outline" id="backBtn" style="color: white;" type="button">
                     <i class="fa-solid fa-arrow-left"></i>
                 </button>
@@ -39,55 +39,54 @@
         <div class="card" style="margin: 16px; margin-top: 72px;">
             <div class="card-body">
                 <h5 class="card-title">
-                    <i class="fa-solid fa-clock"></i> 距離圓周率日還有
+                    <i class="fa-solid fa-clock"></i> There are
                 </h5>
                 <p class="card-text">
                 <div class="countdownDiv">
                     <h5 id="countdown" style="font-size: xx-large; font-weight: bold;"></h5>
-                    <h5>天</h5>
+                    <h5>days until Pi day.</h5>
                 </div>
                 <div class="pidayDiv">
-                    <p><i class="fa-solid fa-exclamation"></i></i>今天是</p>
-                    <h3>圓周率日</h3>
-                    <p>耶~ (ﾉﾟ▽ﾟ)ﾉ</p>
+                    <p><i class="fa-solid fa-exclamation"></i></i>Today is</p>
+                    <h3>Pi day!</h3>
+                    <p>Yeah~ :)</p>
                 </div>
             </div>
         </div>
-        <!--圓周率日倒計時 JavaScript-->
+        <!--Countdown to Pi day JavaScript-->
         <script type="text/javascript">
-            // 獲取今天的日期
+            // Get today's date
             let today = new Date();
 
-            // 設置3月14日的日期
+            // Set the date as 14/3
             let piDay = new Date(today.getFullYear(), 3-1, 14);
 
-            // 若今天日期已超過3月14日，則設置為下一年的3月14日並隱藏piday
+            // If today's date is already past 14/3, set it as 14/3 of the following tear and hide 'pidayDiv'
             if (today > piDay) {
                 piDay.setFullYear(piDay.getFullYear() + 1);
                 document.querySelector(".pidayDiv").style.display = "none";
             }
 
-            // 若今天為3月14日，則隱藏countdown並顯示piday
+            // If today is 14/3, hide the countdown and display 'pidayDiv'
             else if (today == piDay) {
                 document.querySelector(".countdownDiv").style.display = "none";
                 document.querySelector(".pidayDiv").style.display = "block";
             }
 
-            // 若今天的日期還未到3月14日，則隱藏piday
+            // If today's date has not yet reached 14/3, hide 'pidayDiv'
             else {
                 document.querySelector(".pidayDiv").style.display = "none";
             }
 
-            // 計算剩餘天數
+            // Calculate the remaining days
             let timeLeft = Math.round((piDay.getTime() - today.getTime()) / (1000 * 60 * 60 * 24));
 
-            // 在網頁上顯示倒計時
+            // Display the countdown on the webpage
             document.getElementById("countdown").innerHTML = timeLeft
         </script>
         <!--footer-->
-        <footer class="panel-footer d-flex" style="margin: 16px;">
-            <p style="font-family: 'Montserrat';">&copy; 2019-Now SiberiaHusky</p>
-            <a style="margin-left: 16px;" href="//icp.gov.moe/?keyword=20238314"><p style="font-family: 'Montserrat';">萌ICP备20238314号</p></a>
+        <footer style="margin: 6%;">
+            <a style="color: rgba(255, 255, 255, 0.05);">Copyright &copy; SiberiaHusky</a>
         </footer>
         <!--script-->
         <script src="//mirror.hooskai.ml/bootstrap/bootstrap.bundle.min.js"></script>
