--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@
                 var index = 0;
     
                 setTimeout(function() {
-                    window.history.back()
+                    window.location.replace('//intl.hooskai.ml')
                 }, 5000);
     
                 setInterval(function() {
@@ -37,7 +37,7 @@
             });
         </script>
         <!--footer-->
-        <footer style="margin: 60pt; margin-top: -60pt;">
+        <footer style="margin: 40pt; margin-top: -40pt;">
             <p style="font-size: 10pt; color: rgba(255, 255, 255, 0.25);">Copyright &copy; SiberiaHusky</p>
         </footer>
         <!--script-->
