--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         My works and Web-related stuff.
                     </p>
                 </div>
-                <ul class="list-group list-group-flush">
+                <ul class="list-group list-group-flush" style="background-color: #252525; color: #252525;">
                     <li class="list-group-item"><a href="/apps/piday/index.html">Calculate to Pi day</a></li>
                     <li class="list-group-item"><a href="//stats.uptimerobot.com/5XXzmSM9NJ" target="_blank">My website status<i class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
                     <li class="list-group-item"><a href="/links.html">Friend links</a></li>
@@ -122,7 +122,7 @@
             </div>
         </div>
         <!--footer-->
-        <footer style="margin: 6%;">
+        <footer style="margin: 3%;">
             <a style="color: rgba(255, 255, 255, 0.05);">Copyright &copy; SiberiaHusky</a>
         </footer>
         <!--script-->
