--- a/404.html
+++ b/404.html
@@ -15,14 +15,14 @@
         <!--blue screen-->
         <div style="margin: 40pt;">
             <h1 style="font-size: 60pt; font-weight: normal; color: white;">:(</h1>
-            <p style="font-size: 20pt; color: white; margin-top: 20pt;">The Webpage or Files connot be found. After <span id="changingText">5</span> seconds, the web page will automatically return.</p>
+            <p style="font-size: 20pt; color: white; margin-top: 20pt;">The Webpage or Files cannot be found. After <span id="changingText">5</span> seconds, the web page will automatically return.</p>
             <p style="font-size: 10pt; color: white; margin-top: 80pt;">If the file is very Important, you can send an <a href="mailto:mail@hooskai.ml" style="color: white; font-weight: bold;">E-Mail</a> to me.</p>
         </div>
         <!--count down script-->
         <script>
             document.addEventListener("DOMContentLoaded", function() {
                 var textElement = document.getElementById("changingText");
-                var texts = ["4", "3", "2", "1","0"]; // 可根据需要自定义更换的文本
+                var texts = ["4", "3", "2", "1","0"];
     
                 var index = 0;
     
