--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
         </nav>
         <!--content-->
-        <div style="margin: 3%; margin-top: 12%;">
+        <div style="margin: 16px; margin-top: 72px;">
             <!--profile-->
             <div class="card" id="profile">
                 <div class="card-body">
@@ -53,11 +53,11 @@
                         My works and Web-related stuff.
                     </p>
                 </div>
-                <ul class="list-group list-group-flush" style="background-color: #252525; color: #252525;">
-                    <li class="list-group-item"><a href="/apps/piday/index.html">Calculate to Pi day</a></li>
-                    <li class="list-group-item"><a href="//stats.uptimerobot.com/5XXzmSM9NJ" target="_blank">My website status<i class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
-                    <li class="list-group-item"><a href="/links.html">Friend links</a></li>
-                    <li class="list-group-item"><a href="//hooskai.ml/">中文版 Chinese</a></li>
+                <ul class="list-group list-group-flush">
+                    <a href="/apps/piday/index.html"><li class="list-group-item">Calculate to Pi day</li></a>
+                    <a href="//stats.uptimerobot.com/5XXzmSM9NJ" target="_blank"><li class="list-group-item">My website status<i class="fa-solid fa-arrow-up-right-from-square"></i></li></a>
+                    <a href="/links.html"><li class="list-group-item">Friend links</li></a>
+                    <a href="//hooskai.ml/"><li class="list-group-item">中文版 Chinese</li></a>
                 </ul>
             </div>
             <!--contact-->
@@ -94,25 +94,25 @@
                     <div class="col" style="padding-left: 2%; padding-right: 2%;">
                         <div class="card text-white" style="background-color: #1671EA; border-radius: 0;">
                             <div class="card-body">
-                                <h5 class="card-title"><i class="fa-brands fa-facebook" style="margin-right: 2%;"></i>GitHub</h5>
-                                <a href="//www.facebook.com/profile.php?id=100060712148438" target="_blank" class="btn" style="margin-top: 1%; background-color: white; color: #24292F; font-weight: bold;">siberiahusky</a>
+                                <h5 class="card-title"><i class="fa-brands fa-facebook" style="margin-right: 8px;"></i>GitHub</h5>
+                                <a href="//www.facebook.com/profile.php?id=100060712148438" target="_blank" class="btn" style="margin-top: 8px; background-color: white; color: #1671EA; font-weight: bold;">siberiahusky</a>
                             </div>
                         </div>
                     </div>
                     <!--Instagram-->
-                    <div class="col" style="padding-left: 2%; padding-right: 2%;">
+                    <div class="col" style="padding-left: 16px; padding-right: 16px;">
                         <div class="card text-white" style="background: linear-gradient(135deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d, #f56042, #f77737, #fcaf45, #ffdc80); border-radius: 0;">
                             <div class="card-body">
-                                <h5 class="card-title"><i class="fa-brands fa-instagram" style="margin-right: 2%;"></i>Instagram</h5>
-                                <a href="//www.Instagram.com/invites/contact/?i=1lma9xhiy30g3&utm_content=cii89vh" target="_blank" class="btn" style="margin-top: 1%; background-color: white; color: #24292F; font-weight: bold;">hhusky0314</a>
+                                <h5 class="card-title"><i class="fa-brands fa-instagram" style="margin-right: 8px;"></i>Instagram</h5>
+                                <a href="//www.Instagram.com/invites/contact/?i=1lma9xhiy30g3&utm_content=cii89vh" target="_blank" class="btn" style="margin-top: 8px; background-color: white; color: #1671EA; font-weight: bold;">hhusky0314</a>
                             </div>
                         </div>
                     </div>
                     <!--E-Mail-->
-                    <div class="col" style="padding: 2%; padding-top: 0;">
+                    <div class="col" style="padding: 16px; padding-top: 0;">
                         <div class="card text-white" style="background-color: #1e86dd; border-radius: 0;">
                             <div class="card-body">
-                                <h5 class="card-title"><i class="fa-solid fa-envelope" style="margin-right: 2%;"></i>E-Mail</h5>
+                                <h5 class="card-title"><i class="fa-solid fa-envelope" style="margin-right: 8px;"></i>E-Mail</h5>
                                 <p>The email service for the website is provided by <a href="//mail.ru" style="color: white; font-weight: bold;">Mail.ru</a>.</p>
                                 <a href="mailto:mail@hooskai.ml" target="_blank" class="btn" style="background-color: white; color: #1e86dd; font-weight: bold;">Send me an E-Mail</a>
                             </div>
@@ -122,8 +122,8 @@
             </div>
         </div>
         <!--footer-->
-        <footer style="margin: 3%;">
-            <a style="color: rgba(255, 255, 255, 0.05);">Copyright &copy; SiberiaHusky</a>
+        <footer style="margin: 16px;">
+            <a style="color: rgba(255, 255, 255, 0.25);">Copyright &copy; SiberiaHusky</a>
         </footer>
         <!--script-->
         <script src="//mirror.hooskai.ml/bootstrap/bootstrap.bundle.min.js"></script>
