--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <div style="margin: 16px; margin-top: 72px;">
             <!--profile-->
             <div class="card" id="profile">
-                <div class="card-body">
+                <div class="card-body"  style="margin-bottom: -16px;">
                     <h5 class="card-title">
-                        <i class="fa-solid fa-circle-info" style="margin-right: 2%;"></i>My profile
+                        <i class="fa-solid fa-circle-info" style="margin-right: 16px;"></i>My profile
                     </h5>
                     <p class="card-text">
                         <p>First of all, nice to meet you! :)</p>
@@ -44,10 +44,10 @@
                 </div>
             </div>
             <!--works-->
-            <div class="card" id="works" style="margin-top: 3%">
+            <div class="card" id="works" style="margin-top: 24px">
                 <div class="card-body">
                     <h5 class="card-title">
-                        <i class="fa-solid fa-code" style="margin-right: 2%;"></i>My works
+                        <i class="fa-solid fa-code" style="margin-right: 8px;"></i>My works
                     </h5>
                     <p class="card-text">
                         My works and Web-related stuff.
@@ -61,41 +61,41 @@
                 </ul>
             </div>
             <!--contact-->
-            <div class="card" id="contacts" style="margin-top: 3%">
+            <div class="card" id="contacts" style="margin-top: 24px">
                 <div class="card-body">
                     <h5 class="card-title">
-                        <i class="fa-solid fa-hashtag" style="margin-right: 2%;"></i>My contact information
+                        <i class="fa-solid fa-hashtag" style="margin-right: 8px;"></i>My contact information
                     </h5>
                     <p class="card-text">
                         My account name on SNS, and E-Mail address.
                     </p>
                 </div>
                 <!--row-->
-                <div class="row row-cols-1 row-cols-md-2 g-4" style="margin: 1%; margin-top: -4%;">
+                <div class="row row-cols-1 row-cols-md-2 g-4" style="margin: 0; margin-top: -32px;">
                     <!--Twitter-->
-                    <div class="col" style="padding-left: 2%; padding-right: 2%;">
+                    <div class="col" style="padding-left: 16px; padding-right: 16px;">
                         <div class="card text-white" style="background-color: #1C9BF0; border-radius: 0;">
                             <div class="card-body">
                                 <h5 class="card-title"><i class="fa-brands fa-twitter" style="margin-right: 2%;"></i>Twitter</h5>
-                                <a href="//twitter.com/hhusky0314" target="_blank" class="btn" style="margin-top: 1%; background-color: white; color: #1C9BF0; font-weight: bold;">hhusky0314</a>
+                                <a href="//twitter.com/hhusky0314" target="_blank" class="btn" title="Click to visit my Twitter account" style="margin-top: 1%; background-color: white; color: #1C9BF0; font-weight: bold;">hhusky0314</a>
                             </div>
                         </div>
                     </div>
                     <!--GitHub-->
-                    <div class="col" style="padding-left: 2%; padding-right: 2%;">
+                    <div class="col" style="padding-left: 16px; padding-right: 16px;">
                         <div class="card text-white" style="background-color: #24292F; border-radius: 0;">
                             <div class="card-body">
                                 <h5 class="card-title"><i class="fa-brands fa-github" style="margin-right: 2%;"></i>GitHub</h5>
-                                <a href="//github.com/siberiahusky" target="_blank" class="btn" style="margin-top: 1%; background-color: white; color: #24292F; font-weight: bold;">siberiahusky</a>
+                                <a href="//github.com/siberiahusky" target="_blank" class="btn" title="Click to visit my Github account" style="margin-top: 1%; background-color: white; color: #24292F; font-weight: bold;">siberiahusky</a>
                             </div>
                         </div>
                     </div>
                     <!--Facebook-->
-                    <div class="col" style="padding-left: 2%; padding-right: 2%;">
+                    <div class="col" style="padding-left: 16px; padding-right: 16px;">
                         <div class="card text-white" style="background-color: #1671EA; border-radius: 0;">
                             <div class="card-body">
-                                <h5 class="card-title"><i class="fa-brands fa-facebook" style="margin-right: 8px;"></i>GitHub</h5>
-                                <a href="//www.facebook.com/profile.php?id=100060712148438" target="_blank" class="btn" style="margin-top: 8px; background-color: white; color: #1671EA; font-weight: bold;">siberiahusky</a>
+                                <h5 class="card-title"><i class="fa-brands fa-facebook" style="margin-right: 8px;"></i>Facebook</h5>
+                                <a href="//www.facebook.com/profile.php?id=100060712148438" target="_blank" class="btn" title="Click to visit my Facebook accont" style="margin-top: 8px; background-color: white; color: #1671EA; font-weight: bold;">siberiahusky</a>
                             </div>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
                         <div class="card text-white" style="background: linear-gradient(135deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d, #f56042, #f77737, #fcaf45, #ffdc80); border-radius: 0;">
                             <div class="card-body">
                                 <h5 class="card-title"><i class="fa-brands fa-instagram" style="margin-right: 8px;"></i>Instagram</h5>
-                                <a href="//www.Instagram.com/invites/contact/?i=1lma9xhiy30g3&utm_content=cii89vh" target="_blank" class="btn" style="margin-top: 8px; background-color: white; color: #1671EA; font-weight: bold;">hhusky0314</a>
+                                <a href="//www.Instagram.com/invites/contact/?i=1lma9xhiy30g3&utm_content=cii89vh" target="_blank" class="btn" title="Click to visit my Instagram account" style="margin-top: 8px; background-color: white; color: #1671EA; font-weight: bold;">hhusky0314</a>
                             </div>
                         </div>
                     </div>
@@ -113,8 +113,8 @@
                         <div class="card text-white" style="background-color: #1e86dd; border-radius: 0;">
                             <div class="card-body">
                                 <h5 class="card-title"><i class="fa-solid fa-envelope" style="margin-right: 8px;"></i>E-Mail</h5>
-                                <p>The email service for the website is provided by <a href="//mail.ru" style="color: white; font-weight: bold;">Mail.ru</a>.</p>
-                                <a href="mailto:mail@hooskai.ml" target="_blank" class="btn" style="background-color: white; color: #1e86dd; font-weight: bold;">Send me an E-Mail</a>
+                                <p>The email service for the website is provided by <a href="//mail.ru" target="_blank" style="color: white; font-weight: bold;">Mail.ru</a>.</p>
+                                <a href="mailto:mail@hooskai.ml" class="btn" title="Click to send me an E-Mail" style="background-color: white; color: #1e86dd; font-weight: bold;">mail@hooskai.ml</a>
                             </div>
                         </div>
                     </div>
