--- a/links.html
+++ b/links.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-dark fixed-top" style="background-color: #1e86dd;">
             <div class="container-fluid">
                 <a class="navbar-brand">Friendlinks</a>
-                <button class="btn btn-outline" id="backBtn" style="color: white;" type="button">
+                <button class="btn btn-outline" id="backBtn" title="Click to return to the homepage" style="color: white;" type="button">
                     <i class="fa-solid fa-arrow-left"></i>
                 </button>
             </div>
@@ -30,37 +30,37 @@
         <script>
             var backButton = document.getElementById("backBtn");
             backButton.addEventListener("click", function() {
-                history.back();
+                window.location.replace('//intl.hooskai.ml')
             });
         </script>
         <!--content-->
-        <div class="card" style="margin: 3%; margin-top: 12%;">
+        <div class="card" style="margin: 16px; margin-top: 72px;">
             <div class="card-body">
                 <h5 class="card-title">
                     <i class="fa-solid fa-user-group" style="margin-right: 2%;"></i>My friends
                 </h5>
                 <p class="card-text">
                     <p>After adding this site to the "Friendlinks" webpage or section of your website, please send the URL and a brief description of your website to <a href="mailto:mail@hooskai.ml" style="font-weight: bold;">My E-Mail</a>. I will add it once received.</p>
-                    <p>For example: Site Name: Hooskai's Website, Description: Connecting a wider world.</p>
+                    <p>For example: Site Name: Husky's Website, Description: Connecting a wider world.</p>
                 </p>
             </div>
             <!--row-->
-            <div class="row row-cols-1 row-cols-md-2 g-4" style="margin: 1%; margin-top: -4%;">
+            <div class="row row-cols-1 row-cols-md-2 g-4" style="margin: 0; margin-top: -32px;">
                 <!--Rominwolf-->
                 <div class="col" style="padding: 16px; padding-top: 0;">
                     <div class="card text-white" style="background-color: #F57C00; border-radius: 0;">
                         <div class="card-body">
                             <h5 class="card-title">Rominwolf's boxes</h5>
                             <p>Leave a beautiful memory for my future self.<br>给未来的自己，留一份美好的回忆。</p>
-                            <a href="//blog.wsm.ink/" target="_blank" class="btn" style="background-color: white; color: #F57C00; font-weight: bold; border-radius: 0;">Go</a>
+                            <a href="//blog.wsm.ink/" target="_blank" class="btn" title="Click to visit Rominwolf's website" style="font-weight: bold; border-radius: 0;">Go</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <!--footer-->
-        <footer style="margin: 3%;">
-            <a style="color: rgba(255, 255, 255, 0.05);">Copyright &copy; SiberiaHusky</a>
+        <footer style="margin: 16px;">
+            <a style="color: rgba(255, 255, 255, 0.25);">Copyright &copy; SiberiaHusky</a>
         </footer>
         <!--script-->
         <script src="//mirror.hooskai.ml/bootstrap/bootstrap.bundle.min.js"></script>
