--- a/404.html
+++ b/404.html
@@ -4,19 +4,19 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale-1">
         <title>404 | Husky's website</title>
-        <link rel="icon" href="/images/favicon.png">
+        <link rel="icon" href="//intl.hooskai.top/images/favicon.png">
         <!--description-->
         <meta name="description" content="Connecting a wider World.">
         <!--keywords-->
         <meta name="keywords" content="胡斯凯,胡斯凱,hooskai,siberia husky,SiberiaHusky">
-        <link href="/assets/style.css" rel="stylesheet">
+        <link href="//intl.hooskai.top/assets/style.css" rel="stylesheet">
     </head>
     <body style="background-color: #1e86dd;">
         <!--blue screen-->
         <div style="margin: 40pt;">
             <h1 style="font-size: 60pt; font-weight: normal; color: white;">:(</h1>
             <p style="font-size: 20pt; color: white; margin-top: 20pt;">The Webpage or Files cannot be found. After <span id="changingText">5</span> seconds, the web page will automatically return.</p>
-            <p style="font-size: 10pt; color: white; margin-top: 80pt;">If the file is very Important, you can send an <a href="mailto:mail@hooskai.ml" style="color: white; font-weight: bold;">E-Mail</a> to me.</p>
+            <p style="font-size: 10pt; color: white; margin-top: 80pt;">If the file is very Important, you can send an <a href="mailto:mail@hooskai.top" style="color: white; font-weight: bold;">E-Mail</a> to me.</p>
         </div>
         <!--count down script-->
         <script>
@@ -27,7 +27,7 @@
                 var index = 0;
     
                 setTimeout(function() {
-                    window.location.replace('//intl.hooskai.ml')
+                    window.location.replace('//intl.hooskai.top')
                 }, 5000);
     
                 setInterval(function() {
@@ -41,6 +41,6 @@
             <p style="font-size: 10pt; color: rgba(255, 255, 255, 0.25);">Copyright &copy; SiberiaHusky</p>
         </footer>
         <!--script-->
-        <script src="//mirror.hooskai.ml/bootstrap/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
