--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale-1">
         <title>Husky's website</title>
-        <link rel="icon" href="/images/favicon.png">
+        <link rel="icon" href="//intl.hooskai.top/images/favicon.png">
         <!--description-->
         <meta name="description" content="Connecting a wider World.">
         <!--keywords-->
         <meta name="keywords" content="胡斯凯,胡斯凱,hooskai,siberia husky,SiberiaHusky">
         <!--Bootstrap-->
-        <link href="//mirror.hooskai.ml/bootstrap/bootstrap.min.css" rel="stylesheet" />
-        <!--link href="//cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" /-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" />
         <!--fontawesome-->
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
         <!--styles-->
-        <link href="//intl.hooskai.ml/assets/style.css" rel="stylesheet">
+        <link href="//intl.hooskai.top/assets/style.css" rel="stylesheet">
     </head>
     <body>
         <!--navbar-->
@@ -57,7 +56,7 @@
                     <a href="/apps/piday/index.html"><li class="list-group-item">Calculate to Pi day</li></a>
                     <a href="//stats.uptimerobot.com/5XXzmSM9NJ" target="_blank"><li class="list-group-item">My website status<i class="fa-solid fa-arrow-up-right-from-square"></i></li></a>
                     <a href="/links.html"><li class="list-group-item">Friend links</li></a>
-                    <a href="//hooskai.ml/"><li class="list-group-item">中文版 Chinese</li></a>
+                    <a href="//hooskai.top/"><li class="list-group-item">中文版 Chinese</li></a>
                 </ul>
             </div>
             <!--contact-->
@@ -114,7 +113,7 @@
                             <div class="card-body">
                                 <h5 class="card-title"><i class="fa-solid fa-envelope" style="margin-right: 8px;"></i>E-Mail</h5>
                                 <p>The email service for the website is provided by <a href="//mail.ru" target="_blank" style="color: white; font-weight: bold;">Mail.ru</a>.</p>
-                                <a href="mailto:mail@hooskai.ml" class="btn" title="Click to send me an E-Mail" style="background-color: white; color: #1e86dd; font-weight: bold;">mail@hooskai.ml</a>
+                                <a href="mailto:mail@hooskai.top" class="btn" title="Click to send me an E-Mail" style="background-color: white; color: #1e86dd; font-weight: bold;">mail@hooskai.top</a>
                             </div>
                         </div>
                     </div>
@@ -126,6 +125,6 @@
             <a style="color: rgba(255, 255, 255, 0.25);">Copyright &copy; SiberiaHusky</a>
         </footer>
         <!--script-->
-        <script src="//mirror.hooskai.ml/bootstrap/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
