--- a/links.html
+++ b/links.html
@@ -4,17 +4,17 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale-1">
         <title>Friendlinks | Husky's website</title>
-        <link rel="icon" href="/images/favicon.png">
+        <link rel="icon" href="//intl.hooskai.top/images/favicon.png">
         <!--description-->
-        <meta name="description" content="Connecting a wider world.">
+        <meta name="description" content="Connecting a wider World.">
         <!--keywords-->
         <meta name="keywords" content="胡斯凯,胡斯凱,hooskai,siberia husky,SiberiaHusky">
         <!--Bootstrap-->
-        <link href="//mirror.hooskai.ml/bootstrap/bootstrap.min.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" />
         <!--fontawesome-->
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
         <!--styles-->
-        <link href="//intl.hooskai.ml/assets/style.css" rel="stylesheet">
+        <link href="//intl.hooskai.top/assets/style.css" rel="stylesheet">
     </head>
     <body>
         <!--navbar-->
@@ -30,7 +30,7 @@
         <script>
             var backButton = document.getElementById("backBtn");
             backButton.addEventListener("click", function() {
-                window.location.replace('//intl.hooskai.ml')
+                window.location.replace('//intl.hooskai.top')
             });
         </script>
         <!--content-->
@@ -40,7 +40,7 @@
                     <i class="fa-solid fa-user-group" style="margin-right: 2%;"></i>My friends
                 </h5>
                 <p class="card-text">
-                    <p>After adding this site to the "Friendlinks" webpage or section of your website, please send the URL and a brief description of your website to <a href="mailto:mail@hooskai.ml" style="font-weight: bold;">My E-Mail</a>. I will add it once received.</p>
+                    <p>After adding this site to the "Friendlinks" webpage or section of your website, please send the URL and a brief description of your website to <a href="mailto:mail@hooskai.top" style="font-weight: bold;">My E-Mail</a>. I will add it once received.</p>
                     <p>For example: Site Name: Husky's Website, Description: Connecting a wider world.</p>
                 </p>
             </div>
@@ -51,7 +51,7 @@
                     <div class="card text-white" style="background-color: #F57C00; border-radius: 0;">
                         <div class="card-body">
                             <h5 class="card-title">Rominwolf's boxes</h5>
-                            <p>Leave a beautiful memory for my future self.<br>给未来的自己，留一份美好的回忆。</p>
+                            <p>给未来的自己，留一份美好的回忆。</p>
                             <a href="//blog.wsm.ink/" target="_blank" class="btn" title="Click to visit Rominwolf's website" style="font-weight: bold; border-radius: 0;">Go</a>
                         </div>
                     </div>
@@ -63,6 +63,6 @@
             <a style="color: rgba(255, 255, 255, 0.25);">Copyright &copy; SiberiaHusky</a>
         </footer>
         <!--script-->
-        <script src="//mirror.hooskai.ml/bootstrap/bootstrap.bundle.min.js"></script>
+        <script src="//mirror.hooskai.top/bootstrap/bootstrap.bundle.min.js"></script>
     </body>
 </html>
