--- a/apps/piday/index.html
+++ b/apps/piday/index.html
@@ -4,18 +4,18 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale-1">
         <title>Countdown to Pi day | Husky's website</title>
-        <link rel="icon" href="//intl.hooskai.ml/images/favicon.png">
+        <link rel="icon" href="//intl.hooskai.top/images/favicon.png">
         <!--description-->
         <meta name="description" content="Connecting a wider World.">
         <!--keywords-->
         <meta name="keywords" content="胡斯凯,胡斯凱,hooskai,siberia husky,SiberiaHusky,pi,pi day,圓周率日.圆周率日,3.14">
         <!--Bootstrap-->
-        <link href="//mirror.hooskai.ml/bootstrap/bootstrap.min.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" />
         <!--fontawesome-->
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
         <!--styles-->
-        <link href="//intl.hooskai.ml/assets/style.css" rel="stylesheet">
-        <script src="//intl.hooskai.ml/assets/script.js"></script>
+        <link href="//intl.hooskai.top/assets/style.css" rel="stylesheet">
+        <script src="//intl.hooskai.top/assets/script.js"></script>
     </head>
     <body>
         <!--navbar-->
@@ -31,7 +31,7 @@
         <script>
             var backButton = document.getElementById("backBtn");
             backButton.addEventListener("click", function() {
-                window.location.replace('//intl.hooskai.ml')
+                window.location.replace('//intl.hooskai.top')
             });
         </script>
         <!--main container-->
@@ -88,6 +88,6 @@
             <a style="color: rgba(255, 255, 255, 0.25);">Copyright &copy; SiberiaHusky</a>
         </footer>
         <!--script-->
-        <script src="//mirror.hooskai.ml/bootstrap/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
