--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 </div>
                 <ul class="list-group list-group-flush">
                     <a href="/apps/piday/index.html"><li class="list-group-item">Calculate to Pi day</li></a>
+                    <a href="//github.com/SiberiaHusky/Hooskai-Chamfered-Square/"><li class="list-group-item">Hooskai Chamfered Square font</li></a>
                     <a href="//stats.uptimerobot.com/5XXzmSM9NJ" target="_blank"><li class="list-group-item">My website status<i class="fa-solid fa-arrow-up-right-from-square"></i></li></a>
                     <a href="/links.html"><li class="list-group-item">Friend links</li></a>
                     <a href="//hooskai.top/"><li class="list-group-item">中文版 Chinese</li></a>
